@@ -12,6 +12,10 @@ Release 1.1.2 Start 10/10/2021 End --/--/20--
 - 13/12/2022
 05. wait.h: use system defined wait macros from sys/wait.h
 06. error.c, error.h: added error_child for ECHILD
+- 17/12/2022
+07. wait.h: added wait_handler() and wait_exited macro
+08. wait_handler.c: added wait_handler() function wrapper for handling wait
+    status
 
 * Thu 08 Sep 2022 03:42:16 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.1-1.1%{?dist}
 Release 1.1.1 Start 18/07/2021 End 08/09/2022
